# safra_test

./: .gitignore  README.md  jptd.ipynb  pyproject.toml
.github/workflows/: ci.yml
archive/: jptd_2022.ipynb
notebooks/: 01_prova_safra.ipynb  _build_notebook.py
src/safra_quant/: __init__.py  _demo.py  benchmark.py  data.py  indicators.py  plots.py  returns.py  stats.py  strategy.py  universe.py
tests/: conftest.py  test_benchmark.py  test_data.py  test_indicators.py  test_returns.py  test_stats.py  test_strategy.py
