[project]
name = "safra-quant"
version = "0.2.0"
description = "Restructured Safra Asset Python proficiency test — v2 (2026)"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "João Pedro Tavares d'Ávila", email = "davila.joaopedro@gmail.com" }]
license = { text = "MIT" }
dependencies = [
    "pandas>=2.2,<3.0",
    "numpy>=1.26,<3.0",
    "yfinance>=0.2.40",
    "matplotlib>=3.8",
    "pyarrow>=15.0",
]

[project.optional-dependencies]
notebook = ["jupyter>=1.0", "ipykernel>=6.29"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
    "pandas-stubs>=2.2",
    "types-requests",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/safra_quant"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]
extend-exclude = ["archive", "notebooks"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["N802"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/safra_quant"]
warn_unused_ignores = true
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = ["yfinance.*", "matplotlib.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
filterwarnings = ["ignore::DeprecationWarning:yfinance.*"]
